docs: swagger /api/auth/register
